--- a/Taller/css/formularioTarjeta.css
+++ b/Taller/css/formularioTarjeta.css
@@ -61,7 +61,7 @@
         .container2 form .submit-btn {
             width: 100%;
             /*background: linear-gradient(45deg, blueviolet, deeppink);*/
-            background: #006465;
+            background: #4bbebf;
             padding: 10px;
             font-size: 20px;
             color: #fff;
@@ -89,7 +89,7 @@
             top: 0;
             left: 0;
             /*background: linear-gradient(45deg, blueviolet, deeppink);*/
-            background: #006465;
+            background: #4bbebf;
             border-radius: 5px;
             backface-visibility: hidden;
             box-shadow: 0 15px 25px rgba(0,0,0,.2);
